Fix hover state for links in dark mode

--- a/styles/index.css
+++ b/styles/index.css
@@ -431,6 +431,10 @@ footer a:hover {
     color: rgba(255, 255, 255, 0.8);
   }
 
+  .nav a:hover {
+    color: white;
+  }
+
   .active_nav {
     color: white;
   }
